# better-rss-parser

./: pyproject.toml
src/better_rss_parser/: main.py  parser.py
