[project]
name = "better-rss-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "Laurence Trippen",email = "laurence.trippen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "better_rss_parser", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
